My Business Proposal Website

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             </section>
 
             <!-- ====== Break Even Analysis   ======== -->
-            <section class="home" id="break-even">
+            <section  id="break-even">
                 <h3 class="sub-title">Break Even Analysis 
                 </h3>
                 <p style="text-align: center;" class="centered">
