My Business Proposal Website

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="app.css">
     <title>CASCO Business Proposal</title>
 </head>
-<body >
+<body>
     <div class="top-scroll"><a href="#home">Top</a></div>
     <h3 class="web-heading" id="home">THE CARMINGLES AUTOMOBILE SERVICES COMPANY [CASCO] BUSINESS PROPOSAL.
     </h3>
@@ -44,7 +44,7 @@
         <button class="menu-btn">MENU</button>
     </nav>
 
-    <main>
+    <main class="container">
         <section class="home">
             <h3 class="title-copy">
                 A Short and Focused Proposal For Business Investment Oppotunity in Cars Repairs, Wheel Balancing, Wheel Allignment, Oil Changes, and Suspension System Overhauling.
@@ -326,9 +326,50 @@
 
         <!-- ======= Marketing ======= -->
         <section id="marketing">
-            <div class="centered container">
+            <div>
                 <h2>Strategic and Focused marketing For Positioning For Success</h2>
                 <p>Our Strategic Marketing Plans Includes:</p>
+                <p>
+
+                    <strong>A. )  Digital Marketing:</strong> The MD/CEO is tech-savvy, therefore our first and strongest marketing approach is to make use of the the three aspects of digital marketing to promote our auto services and products, these are:
+
+<br><strong>1. Social media marketing:</strong>
+ Facebook, Instagram, WhatsApp, X(Twitter), YouTube, Pinterest, LinkedIn, Medium, Nairaland, etc.
+
+<br><strong>2. Digital Content marketing:</strong>
+This has to do with writing blogging, video blogging, podcasts, etc.
+
+<br><strong>3. The email marketing: </strong>
+this involves use of lead magnets to ask for people' s email in return for a special ebook, gift card, etc, anything of value given for free. This one is to target the corporate ordinances small business owners, LinkedIn audiences, and the elite middle class. 
+
+
+<br><strong>B.) Cold calling/ cold contact marketing:</strong>
+
+The day marketing activities must include contacting prospects with well design and attention grabbing flyers and banners while at the same time having 
+one -on-one  discussions with potential leads. Collecting their phone number and reaching out to them with great offers.
+
+<br><strong>C.) B2B Engagement marketing:</strong>
+
+Here, we place proposals, (well written ones) before the owners, managers, of small businesses such as, schools, hotels, hospitals, churches, NGOs, Government Institutions, corporate societies, etc, showing them how they can save money with on maintenance of their fleets of cars/buses. And how our service scheduling can help keep tracts of fleet maintenance in order to ensure no vehicle is left out of cares needed as at when due, and how our warranty policy help save cost on frequently changing and buying spare parts
+
+<br><strong>D.) Service Delivery Marketing:</strong>
+
+Here we intend to deliver high value services for either completely free or partially free. Services such as:
+
+<br><strong>1.)  Car inspection (one of my strongest approach):</strong>
+people likes to know if the car they are buying is ok or not. Here's where we come in to offer what we know how to do best without any bias. We intend to drive traffic to our business through this means, by inspecting mostly popular brands and listing them on our website, email, WhatsApp on weekly basis for sales. This gener credibility and also earns us commission on sales of any vehicle.
+
+<br><strong>2. ) Free or partially free auto check-ups:</strong>
+
+free scanning, free air-cond diagnosis, free car wash, free air,
+
+<br><strong>3.) Service Quality control:</strong>
+
+thorough checks and balances would be in place for every job. Quality would be taken seriously before delivery to clients. Every necessary checks and correction would be made.
+
+<br><strong>E. Radio jingles, news paper publications and words of mouth: </strong>
+this marketing method would serve huge number of prospects. With a properly formulated content we aim to use the game of numbers to gain new customers.
+                </p>
 
             </div>
 
@@ -343,7 +384,7 @@
             </h3>
             <p style="text-align: center;" class="centered">As we offer services, we have fixed estimate cost rate per service per car types. Bellow is the comprehensive list of our services and how much we charge in Lagos Nigeria:
             </p>
-            <table class="fund-table centered">
+            <table class="fund-table">
                 <thead>
                     <tr>
                         <th>S/Numb.</th>
@@ -554,7 +595,7 @@
             <section  id="break-even">
                 <h3 class="sub-title">Break Even Analysis 
                 </h3>
-                <p style="text-align: center;" class="centered">
+                <p style="text-align: center;">
                     We make N808,000 Monthly, we seek NGN2,000,000. 00 capital investment from investor 
                 </p>
             <div class="cash-flow-calc">  
@@ -569,10 +610,10 @@
             <section class="home" id="profit-sharing">
                 <h3 class="sub-title">PROFIT SHARING 
                 </h3>
-                <p style="text-align: center;" class="centered">
+                <p style="text-align: center;">
                     We seek an investor who will raise NGN2m in the ever lucrative Automotive services and repairs Industry. 
                 </p>
-            <div class="cash-flow-calc centered">  
+            <div class="cash-flow-calc">  
                 <code>
                     The Investor Will be entitled to 15% Equity in the business for life.
                 </code> <br>
