My Business Proposal Website

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             <div class="flash-card">
                 <h3>Our Mission: </h3>
                 <p>
-                    The mission is to remove trials and errors from automotive diagnosis and repairs: <br><br> 
-                    1. Helping customer save time and money spent on repeatitions of repairs jobs, through efficient approaches to repairs, continouse retrainings, adequate diagnosis and use of quality spare parts for clients' cars.<br><br>
+                    The mission is to remove trials and errors from automotive diagnosis and repairs: <br> 
+                    1. Helping customer save time and money spent on repeatitions of repairs jobs, through efficient approaches to repairs, continouse retrainings, adequate diagnosis and use of quality spare parts for clients' cars.<br>
 
-                    2. Tackle tough car faults, repair and maintenance of highly  challenging car issues.<br><br>
+                    2. Tackle tough car faults, repair and maintenance of highly  challenging car issues.<br>
                     
                     3. Honesty, integrity and excellence jobs delivery in all our  dealings that helps us build excellent reputation in the industry.  
                 </p>
@@ -90,7 +90,7 @@
                 <!-- //////////////////////// -->
                 <div class="white-card">    
             <h3>Our Vision</h3>
-            <p class="b-parag">
+            <p>
                 Our vision is to succeed and bring smiles and rest of minds to car and cars fleet owners, be you a business entity or private individual or governmental and non governmental organization. We lift the burdens of automotive maintenance off your shoulder by given you excellent value for your money and time.
             </p> 
             </div>
@@ -599,7 +599,7 @@ this marketing method would serve huge number of prospects. With a properly form
                     We make N808,000 Monthly, we seek NGN2,000,000. 00 capital investment from investor 
                 </p>
             <div class="cash-flow-calc">  
-                <code>We Would Break-Even In How Many Month?: <br> We Would Breake Even in ==>[(Capital) /(MonthlyProfit)] Months = 2,000,000 / 808,000 = 2.48 Month ==>In 2.5 Months we break even</code> <br>
+                <strong>We Would Break-Even In How Many Month?: <br> We Would Breake Even in ==>[(Capital) /(MonthlyProfit)] Months = 2,000,000 / 808,000 = 2.48 Month ==>In 2.5 Months we break even</strong> <br>
 
                 <code> Checks: <br> Break-Even Amount ==> NGN 808, 000 x 2.5 Months = NGN2,020,000 
                 </code>
