My Business Proposal Website

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button class="menu-btn">MENU</button>
     </nav>
 
-    <main class="container">
+    <main>
         <section class="home">
             <h3 class="title-copy">
                 A Short and Focused Proposal For Business Investment Oppotunity in Cars Repairs, Wheel Balancing, Wheel Allignment, Oil Changes, and Suspension System Overhauling.
