My Business Proposal Website

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </ul>
 
             <h3>Customers Pain Ponts</h3>
-            <table>
+            <table class="fund-table">
                 <thead>
                     <tr>
                         <th>The Pain Points of my Prospects in The Auto services.</th>
@@ -523,7 +523,6 @@ this marketing method would serve huge number of prospects. With a properly form
                         <th>Gross Profit</th>
                     </tr>
                 </tbody>
-                Estimate Table:
             </table>
 
 
@@ -546,7 +545,7 @@ this marketing method would serve huge number of prospects. With a properly form
                     <h4>Weekly Cash-Flow Table</h4>
                     <table class="fund-table" >
                         <thead>
-                          <tr style="text-align: left;">
+                          <tr>
                             <!-- <th>S/Numb.</th> -->
                             <th>Services</th>
                             <th>Income</th>
@@ -565,10 +564,10 @@ this marketing method would serve huge number of prospects. With a properly form
                         </tbody>
                     </table>
 
-                    <h4>Monthly Cash-Flow Table:</h4>
+                    
                     <table class="fund-table" >
                         <thead>
-                          <tr style="text-align: left;">
+                          <tr>
                             <!-- <th>S/Numb.</th> -->
                             <th>Services</th>
                             <th>Income</th>
